--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "test": "vitest",
     "coverage": "vitest run --coverage",
     "build": "vite build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist",
     "preview": "vite preview",
     "storybook": "SET NODE_OPTIONS=--openssl-legacy-provider && start-storybook -p 6006",
     "build-storybook": "build-storybook"
@@ -35,6 +37,7 @@
     "@types/react-dom": "^18.0.10",
     "@vitejs/plugin-react": "^3.1.0",
     "babel-loader": "^8.3.0",
+    "gh-pages": "^5.0.0",
     "jest-styled-components": "^7.1.1",
     "jsdom": "^21.1.1",
     "vite": "^4.1.0",
